--- a/missinggenes.Rmd
+++ b/missinggenes.Rmd
@@ -16,6 +16,7 @@ library(vroom)
 library(GENESPACE)
 setwd("~/Dropbox/rumex_pangenome_annotation")
 ```
+#### pre-cleaning using grep
 
 #### raw files
 Loading in wide format from query_pangenes() for each possible reference and bed files.
@@ -115,32 +116,80 @@ write.table(genelisth1,"genelisthap1.txt",quote=FALSE,sep="\t")
 # #write.table(genelistsal, "genelistsal.txt",quote=FALSE,sep="\t")
 ```
 ##### BLAST
-```{bash}
-#source ~/.bash_profile
-#awk -F"-" '/^>/{print $1; next}1' NChap1_final.all.maker.transcripts.fasta > NChap1.out.fasta
+Run in ohta because stuff is installed there. blastexploration.sh and blast_hap2loss.sh
+```{bash eval=FALSE, warning=FALSE,error=FALSE}
+#!/bin/bash
+## parse fasta headers
+awk -F"-" '/^>/{print $1; next}1' NChap1_final.all.maker.transcripts.fasta > NChap1.out.fasta
+## get list of genes to blast in fasta format
+awk '{print $2}' genelisthap1.txt > genelisthap1.out.txt 
+echo "Filter out candidate loss genes from nchap1 transcript fasta"
+genelist="genelisthap1.out.txt"
+fasta="NChap1.out.fasta"
+while read i; do
+    samtools faidx $fasta $i  >> hap1_sequences.fa
+done < $genelist
 
+wait
+## make blast db from nc hap2 transcripts
+echo "starting blastn"
+makeblastdb -in NChap2_final.all.maker.transcripts.fasta -dbtype nucl \
+  -input_type fasta -out hap2transcripts
 
-#echo "Filter out candidate loss genes from nchap1 transcript fasta"
-#genelist="genelisthap1.txt"
-#fasta="NChap1.out.fasta"
-#while read i; do
-#    samtools faidx $fasta $i  >> hap1_sequences.fa
-#done < $genelist
+# the following are one-liners I used to parse and explore blast output
 
-#wait
+## blast results - blasting hap1 missing genes against hap2 transcript fasta ##
+## first attempt:
+blastn -db hap2transcripts -query hap1_sequences.fa   -out blastout.txt
+blastn -db hap2transcripts -query hap1_sequences.fa  -outfmt 6 -out blastout_tab.txt
+## in parsing the results I realized that there were multiple instances of blast hits for the same sequence pairs. Not very useful for me, because at least one strong blast his is enough for me to discount a gene a properly missing.
+## setting max-hsps to 1 (default is 0, whihc means no limit)
+blastn -db hap2transcripts -query hap1_sequences.fa -max_hsps 1  -outfmt 6 -out blast_max1.tsv
+blastn -db hap2transcripts -query hap1_sequences.fa -max_hsps 1 -out blast_max1.xml.txt
+## only the xml format reveals "no hits found" genes
+grep -B 5 "No hits found" blast_max1.xml.txt |grep "Query" > nohits.max1.txt
+## counting
+less nohits.max1.txt |wc -l
+#output: 400
+awk '{print $2}' nohits.max1.txt | grep -v "|" >nohits.max1.genes.txt
+# 397 - 3 of those were dups
+##----------------------------------------------------------------------
+## unique hap1 genes in blast output
+awk '{print $1}' blast_max1.tsv | sort| uniq |wc -l
+# 449, 122 entries are duplicate
 
-#echo "starting blastn"
-#makeblastdb -in NChap2_final.all.maker.transcripts.fasta -dbtype nucl \
-#  -input_type fasta -out hap2transcripts
-  
-#wait
+## total genes in putative missing list 
+#849
 
-
-
-#blastn -db hap2transcripts -query hap1_sequences.fasta \
-#  -out blastout.txt
+## numbers add up - out of the 849 genes, 400 have no hits, 449 have at least one hit, 122 of those have multiple hits in hap2 (on different genes)
+##----------------------------------------------------------------------
+awk '{ if ($3 < 90) { print } }' blast_max1.tsv > lowpercenthits_max1.txt
+# 151 genes have low % ID hits
+awk '{ if ($11 < 0.01) { print } }' blast_max1.tsv > goodEhits_max1.txt
+# 663 (all hits) have good "e" lol
+awk '{ if ($3 < 97) { print } }' blast_max1.tsv > reallylowpercenthits_max1.txt
+# 240 genes have low ID % hits when we make it more stringent
 ```
+#### futher analysis of blast output in R
+problem: 
+```{r, warning=FALSE,message=FALSE}
+blastout<-read_tsv("blast_max1.tsv",
+                   col_names = c("qseqid","sseqid","pident",
+                                "length","mismatch","gapopen",
+                                "qstart","qend","sstart","send","evalue","bitscore"))
+blast<-blastout %>% select(qseqid,sseqid,pident,evalue)
+blast_uniq<- blastout  %>% add_count(qseqid) %>% filter(n==1)
+blast_dup<- blastout %>% add_count(qseqid) %>% filter(n>1)
 
+blast_pos<-full_join(blastout,hap2_raw,by=c("qseqid"="hap1")) %>% select(qseqid,start,end,sseqid,interpChr,chr,pident) %>% add_count(qseqid) 
+blast_uniq_pos<-blast_pos %>%filter(n==1)
+blast_dup_pos<-blast_pos %>%filter(n>1) 
+
+#note from stephen
+#The catch is when there are paralogs in the genome, and how to sort those out- no significant match on Y1 or Y2 is one easy extra test, but then there might be significant matches on Y1 or Y2 that are weaker than on autosomes- I think in those cases we would most simply treat as losses as well
+blast_post %>% 
+```
+e.g. NChap1_final_00000186 has 3 hits to hap2 - one with 100% id, one with 98, one with 83. all on X
 
 #### plotting
 ```{r}
