--- a/missinggenes.Rmd
+++ b/missinggenes.Rmd
@@ -99,6 +99,7 @@ genes missing from hap2
 
 ```{r}
 genelisth1<-hap1_yloss %>% select(hap1)
+genelisth1_chr<-hap1_yloss %>% select(hap1,interpChr)
 #genelistsal<-hap1_yloss_redo %>% select(salicifolius)
 #write.table(genelisth1,"genelisthap1.txt",quote=FALSE,sep="\t")
 # #write.table(genelistsal, "genelistsal.txt",quote=FALSE,sep="\t")
@@ -123,32 +124,48 @@ blast_pos<-full_join(blastout,hap2_raw,by=c("qseqid"="hap1"))  %>% add_count(qse
 hits<-blastout %>% select(qseqid) %>% distinct()
 nohit<- anti_join(genelisth1,hits, by = c("hap1"="qseqid")) # 117 genes in genelist do not have a hit
 # not a surprise, its a big genome! and lots might be garbage!
-okhit<- blastout %>% filter(pident > 90) #19537/25326 are 90% id
+#okhit<- blastout %>% filter(pident > 90) #19537/25326 are 90% id
 ### for each gene with at least one hit - is the top hit on Y1 or Y2?
 # group by gene and chromosome match, mutate ranking pid with highest value having rank 1
 tophit<- blastout %>% group_by(qseqid, sseqid) %>%
   mutate(the_rank  = rank(-pident, ties.method = "random")) %>%
   filter(the_rank == 1) %>% select(-the_rank) %>% mutate(alignedpropn = length/qlen) 
-dim(tophit) #1174 genes based on top hit per chr only
-tophit_eval<- blastout %>% group_by(qseqid, sseqid) %>%
-  mutate(the_rank  = rank(evalue, ties.method = "random")) %>%
-  filter(the_rank == 1) %>% select(-the_rank) # pick the ones with the lowest e-value
-setdiff(tophit$qseqid,tophit_eval$qseqid) # same! whether we ranked based on percent id or e val
-tophitY<-filter(tophit,grepl("Y.",sseqid)) # get all the Y1 and Y2 hits
-
-dim(tophitY) # 418 genes have a top hit on Y1 or Y2
-dim(filter(tophitY, sseqid == "Y1")) # 198 on Y1
-dim(filter(tophitY, sseqid == "Y2")) # 220 on Y2
+#dim(tophit) #1174 genes based on top hit per chr only
+#tophit_eval<- blastout %>% group_by(qseqid, sseqid) %>%
+#  mutate(the_rank  = rank(evalue, ties.method = "random")) %>%
+#  filter(the_rank == 1) %>% select(-the_rank) # pick the ones with the lowest e-value
+#setdiff(tophit$qseqid,tophit_eval$qseqid) # same! whether we ranked based on percent id or e val
+#tophitY<-filter(tophit,grepl("Y.",sseqid)) # get all the Y1 and Y2 hits
+#dim(tophitY) # 418 genes have a top hit on Y1 or Y2
+#dim(filter(tophitY, sseqid == "Y1")) # 198 on Y1
+#dim(filter(tophitY, sseqid == "Y2")) # 220 on Y2
+tophit_geneonly<- blastout %>% group_by(qseqid) %>%
+  mutate(the_rank  = rank(-pident, ties.method = "random")) %>%
+  filter(the_rank == 1) %>% select(-the_rank) %>% mutate(alignedpropn = length/qlen)          
 # what is the proportion of query gene aligned to hap2?
 #tophitY_prop<- tophitY #%>% mutate(alignedpropn = length/qlen) 
 ## filter out genes that have less than half of their sequence length aligned to hap2
-tophitY_partialloss <- tophitY %>% filter(alignedpropn < 0.5)
-tophitY_notloss <- tophitY %>% filter(alignedpropn > 0.5)
+#tophitY_partialloss <- tophitY %>% filter(alignedpropn < 0.5)
+#tophitY_notloss <- tophitY %>% filter(alignedpropn > 0.5)
 
-tophit_partial<- tophit %>% filter(alignedpropn <= 0.5)
-tophit_notloss<-tophit %>% filter(alignedpropn > 0.5)
-## final tabulation
+#tophit_partial<- tophit %>% filter(alignedpropn <= 0.5)
+#tophit_notloss<-tophit %>% filter(alignedpropn > 0.5)
+```
+### exclude paralogs from blast top hit list
+```{r}
+tophit_samechr<- tophit_geneonly %>%
+  left_join(genelisth1_chr,by=c("qseqid"="hap1")) %>%  
+  mutate(matchchr=if_else(interpChr == "X", "Y",
+                           if_else(interpChr == "A1","A1",
+                           if_else(interpChr == "A2","A2",
+                           if_else(interpChr == "A4","A4",NA))))) %>%
+  filter(str_detect(sseqid,matchchr))
+tophit_partial<- tophit_samechr %>% filter(alignedpropn <= 0.5)
+tophit_notloss<-tophit_samechr %>% filter(alignedpropn > 0.5)
+                 
+```
 
+```{r}
 yloss_blast <- hap1_yloss %>% filter(!hap1%in%tophit_notloss$qseqid) %>%
   mutate(region=if_else(interpChr =="X" & end<=71000000,"PAR1",
                         if_else(interpChr =="X" & (end>71000000 & end<=261000000),"OldX",
@@ -190,47 +207,53 @@ hap2_nonsyn<-data.table::fread("pg_hap2_wide.txt")
 
 nsorths2<-hap2_nonsyn %>% filter_all(any_vars(grepl("\\*",.))) 
 
-onlysyn2<-hap2_raw %>% filter(!(pgID%in%nsorths$pgID)) # 30505 genes remain?
+onlysyn2<-hap2_nonsyn %>% filter(!(pgID%in%nsorths2$pgID)) # 30505 genes remain?
 
 
-onlysyn_sal<-sal_raw %>% filter(!(pgID%in%nsorths$pgID)) # 29906?
-hasanortho<-onlysyn %>% filter((hap1!=""|hap2!="")&salicifolius!="")
+#onlysyn_sal<-sal_raw %>% filter(!(pgID%in%nsorths$pgID)) # 29906?
+#hasanortho<-onlysyn2 %>% filter((hap1!=""|hap2!="")&salicifolius!="")
+hasanortho2<-onlysyn2 %>% 
+  filter(((hap1!=""|hap2!="")&salicifolius!="")|((hap1!=""|salicifolius!="")&hap2!="")|((hap2!=""|salicifolius!="")&hap1!=""))
 
-hap1_yloss_redo<-hasanortho %>% filter(hap1!="" & hap2=="" & salicifolius!="")  #number doesn't change (expected)
-
-hap2_xloss<-hasanortho %>% filter(hap1=="" & hap2!="" & salicifolius!="")  #number doesn't change (expected)
+hap2_xloss<-hasanortho2 %>% filter(hap1=="" & hap2!="" & salicifolius!="")  #number doesn't change (expected)
 
 a_xloss<-hap2_xloss %>% group_by(interpChr) %>% summarise(n=n()) %>% 
-  filter(interpChr== "A1"|interpChr=="A2"| interpChr=="A4" |interpChr=="X")
+  filter(interpChr== "A1"|interpChr=="A2"| interpChr=="A4" |interpChr=="Y1"|interpChr=="Y2")
 
 b_xloss<-hasanortho %>% group_by(interpChr) %>% summarise(n=n()) %>%
-  filter(interpChr== "A1"|interpChr=="A2"| interpChr=="A4" |interpChr=="X")
+  filter(interpChr== "A1"|interpChr=="A2"| interpChr=="A4" |interpChr=="Y1"|interpChr=="Y2")
 
-pars_xloss <- hap2_xloss %>% mutate(region=if_else(interpChr =="X" & end<=71000000,"PAR1",
-                        if_else(interpChr =="X" & (end>71000000 & end<=261000000),"OldX",
-                        if_else(interpChr=="X" & (end>261000000 & end<=367000000),"NewX", 
-                        if_else(interpChr=="X" & end>367000000,"PAR2",
+pars_xloss <- hap2_xloss %>% 
+  mutate(region=if_else(interpChr =="Y1" & (end > 272000000 & end <= 343398141),"PAR1",
+                        if_else(interpChr =="Y1" & (end>64000000  & end<=2720000000),"OldY1",
+                        if_else(interpChr=="Y1" & end<=64000000,"NewY1", 
+                        if_else(interpChr=="Y2" & end<=121000000,"PAR2",
+                        if_else(interpChr=="Y2"& (end>121000000&end<=159000000),"NewY2",
+                        if_else(interpChr=="Y2" & end>159000000, "OldY2",
                         if_else(interpChr=="A1","A1",
                         if_else(interpChr=="A2","A2",
-                        if_else(interpChr=="A4","A4",NA))))))))
+                        if_else(interpChr=="A4","A4",NA))))))))))
 summary_xloss_pars <-pars_xloss %>% group_by(region) %>% summarise(n=n()) %>% 
   filter(!is.na(region))
 
-total_pangenes_redo<-hasanortho %>% mutate(region=if_else(interpChr =="X" & end<=71000000,"PAR1",
-                        if_else(interpChr =="X" & (end>71000000 & end<=261000000),"OldX",
-                        if_else(interpChr=="X" & (end>261000000 & end<=367000000),"NewX", 
-                        if_else(interpChr=="X" & end>367000000,"PAR2",
+total_pangenes2<-hasanortho2 %>% 
+  mutate(region=if_else(interpChr =="Y1" & (end > 272000000 & end <= 343398141),"PAR1",
+                        if_else(interpChr =="Y1" & (end>64000000  & end<=2720000000),"OldY1",
+                        if_else(interpChr=="Y1" & end<=64000000,"NewY1", 
+                        if_else(interpChr=="Y2" & end<=121000000,"PAR2",
+                        if_else(interpChr=="Y2"& (end>121000000&end<=159000000),"NewY2",
+                        if_else(interpChr=="Y2" & end>159000000, "OldY2",
                         if_else(interpChr=="A1","A1",
                         if_else(interpChr=="A2","A2",
-                        if_else(interpChr=="A4","A4",NA))))))))
-summary_total_pangenes_redo <-total_pangenes_redo %>% group_by(region) %>% summarise(n=n()) %>% 
+                        if_else(interpChr=="A4","A4",NA))))))))))
+summary_total_pangenes2 <-total_pangenes2 %>% group_by(region) %>% summarise(n=n()) %>% 
   filter(!is.na(region))
 
-chrpropnPAR_xloss<-full_join(summary_total_pangenes_redo,summary_xloss_pars,by="region",suffix=c(".total",".notonhap1")) %>% 
+chrpropnPAR_xloss<-full_join(summary_total_pangenes2,summary_xloss_pars,by="region",suffix=c(".total",".notonhap1")) %>% 
    mutate(., propn=n.notonhap1/n.total) %>% mutate(.,percent = propn*100) %>%
-   mutate(region = factor(region, levels=c("A1","A2","A4","PAR1","OldX","NewX","PAR2"))) 
+   mutate(region = factor(region, levels=c("A1","A2","A4","PAR1","OldY1","NewY2","OldY2","NewY1","PAR2"))) 
 ## plot proportions 
-
+print(chrpropnPAR_xloss)
 #ggplot(chrpropnPAR_xloss) + geom_col(aes(x=region,y=propn)) + 
 #  theme_classic() + 
 #  ylab("proportion annotated pangenes\nshared by haplotype 1 and salicifolius\n with no haplotype 2 ortholog")
